two clickhouse bugs fix: 1. error message is too long to overflow the result region 2. return successfully when non-select queries query successfully

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -139,6 +139,7 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: scroll;
 
   font-size: 1.3rem;
   padding: 24px;
